# Hotel-Recommender

./: .env.sample  README.md  db_setup.py  docker-compose.yaml  hotel_data.json  main.py  mini_lm_embeddings.py  pyproject.toml  requirements.txt  store_data.py
api/: main.py
data/: db_setup.py  store_data.py
models/: hotel.py
schemas/: hotel_recommendation.py  recommendation_request.py
scripts/: db_setup.py  store_data.py
services/: recommender.py
