[project]
name = "hotelrecommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "openai>=1.88.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["F401", "F841", "F403", "F405"]
